# olifilo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  coro.cpp  flake.nix
experiments/: allocator-test.cpp  coro-get-me.cpp
idf/: CMakeLists.txt  sdkconfig.defaults
idf/components/olifilo/: CMakeLists.txt
idf/components/olifilo/include/olifilo/idf/: errors.hpp  event.hpp
idf/components/olifilo/include/olifilo/idf/events/: base.hpp  detail.hpp  eth.hpp  ip.hpp  wifi.hpp
idf/components/olifilo/src/: errors.cpp  event.cpp
idf/main/: CMakeLists.txt  app_main.cpp  nvs-data.csv
include/olifilo/: dynarray.hpp  errors.hpp  expected.hpp  mqtt.hpp  utility.hpp
include/olifilo/coro/: future.hpp  wait.hpp  when_all.hpp  when_any.hpp
include/olifilo/coro/detail/: forward.hpp  io_poll_context.hpp  promise.hpp
include/olifilo/coro/io/: file_descriptor.hpp  socket_descriptor.hpp  stream_socket.hpp  types.hpp
include/olifilo/detail/: small_vector.hpp  variant_ptr.hpp
include/olifilo/io/: connect.hpp  errors.hpp  fcntl.hpp  poll.hpp  read.hpp  select.hpp  sendmsg.hpp  shutdown.hpp  socket.hpp  sockopt.hpp  types.hpp  write.hpp
include/olifilo/io/sockopts/: base.hpp  socket.hpp  tcp.hpp
include/olifilo/mqtt/: errors.hpp
src/: coro.cpp  errors.cpp  logging-stuff.hpp  mqtt.cpp
src/coro/: io_poll_context.cpp  wait.cpp
src/io/: errors.cpp  file_descriptor.cpp  socket_descriptor.cpp  stream_socket.cpp
tests/: variant_ptr.cpp
